--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,15 +27,17 @@
     "react/prop-types": "off",
     "react/jsx-props-no-spreading": "off",
     "no-empty-function": "off",
+    "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/no-empty-function": ["error"],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "react/jsx-filename-extension": [1, {"extensions": [".tsx"]}],
+    "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "import/prefer-default-export": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
-      {"ts": "never", "tsx": "never"}
+      { "ts": "never", "tsx": "never" }
     ]
   },
   "settings": {
